[package]
name = "zcash-dns-seeder-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = "1.13.0"
tokio-util = "0.6.9"
futures = "0.3.17"
tracing = "0.1.29"
tracing-subscriber = "0.3.1"
log = "0.4.14"
chrono = "0.4.19"

# use zebra-network and zebra-chain modules as client library for peer handshake and version validation
zebra-network = { path = "zebra/zebra-network"}
zebra-chain = { path = "zebra/zebra-chain"}

[patch.crates-io]

# TODO: remove these after a new librustzcash release.
# These are librustzcash requirements specified in its workspace Cargo.toml that we must replicate here
incrementalmerkletree = { git = "https://github.com/zcash/incrementalmerkletree", rev = "b7bd6246122a6e9ace8edb51553fbf5228906cbb" }
orchard = { git = "https://github.com/zcash/orchard.git", rev = "2c8241f25b943aa05203eacf9905db117c69bd29" }
zcash_note_encryption = { git = "https://github.com/zcash/librustzcash.git", rev = "53d0a51d33a421cb76d3e3124d1e4c1c9036068e" }
zcash_primitives = { git = "https://github.com/zcash/librustzcash.git", rev = "53d0a51d33a421cb76d3e3124d1e4c1c9036068e" }
